# OS-Design-

./: Asst1 Read me.txt  CMakeLists.txt  Makefile  Queue.c  Queue.h  README.docx  README.md  frame.c  frame.h  my_pthread.c  my_pthread.h  my_pthread_t.h  myallocate.c  myallocate.h  page.c  page.h  parallelCal.c  shared.h
